<resources>
    <string name="app_name">ARTableTop</string>
    <string name="settings_button_description">Settings button</string>
    <string name="board_button_description">Boards button</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_string">ARTableTop</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="add_board">Add board</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="create">CREATE</string>
    <string name="cancel">CANCEL</string>
</resources>
