<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/widthTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/widthPicker"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/width"
        />

    <TextView
            android:id="@+id/heightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/heightPicker"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/height"
        />

    <NumberPicker
            android:id="@+id/widthPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/widthTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/heightPicker"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
        />

    <NumberPicker
            android:id="@+id/heightPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/heightTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
        />

    <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/heightPicker"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:text="@string/create"
            android:background="@android:color/transparent"
        />

    <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/createButton"
            app:layout_constraintTop_toTopOf="@id/createButton"
            android:text="@string/cancel"
            android:background="@android:color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
